Mobile Schedule/schedule.css
body{
    font-family: 'Times New Roman';
    font-size: 100%;
}
div{
    text-align: center;
}
div p{
    position:relative;
    margin:0;
}
#container{
    float:left;
    display:inline;;
}
#header{
    height:30px;
}
#datepicker{
    text-align:center;
    width:200px;
}
.placeholder{
    display:block;
    width:302px;
}
.placeborder{
    border-bottom:1px rgb(228, 228, 228) solid;
}
.class{
    width:300px;
    border:1px solid black;
    font-size:13px;
    vertical-align: middle;
    overflow:hidden;
}
.timeline{
    border-top: 1px solid black;
    float:left;
    display:inline;
}
.timeslot{
    background-color:rgb(228, 228, 228);
    display:block;
    width:16px;
    height:50px;
}
.timeslot.half{
    height:25px;
}
.timeslot.timeslotBorder{
    height:49px;
    border-bottom: 1px solid black;
}
.timeslot.half.timeslotBorder{
    height:24px;
    border-bottom: 1px solid black;
}
.timeslot.number{
    width:18px;
    line-height:50px;
}
.timeslot.right{
    width:8px;
}
.timeslot.right.halftimeslotBorder{
    height:24px;
    border-bottom: 1px solid gray;
}
#side{
    float:left;
    height:600px;
    border-left: 1px solid rgb(228, 228, 228);
}
#holder{
    width:100%;
    text-align:center;
    justify-content:center;
    display:flex;
}
.day{
    float:left;
    display:inline;
    border:none;
}
#nowHolder{
    width:0px;
    height:0px;
    position:relative;
}
#now{
    width:402px;
    border-top:1px solid red;
    position:absolute;
    display:none;
    text-align: right;
    color:red;
    font-size:12px;
}
.TUT{
    border-color:orange;
}
.SEM{
    border-color:blue;
}
.LEC{
    border-color:green;
}
.LAB{
    border-color:red;
}
.TST{
    border-color:brown;
}

